Markup index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="css/style.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <header>
+            <div class="container">
+                <nav>
+                    <div class="logo">
+                        <a href="" class="logo__link">
+                            <img
+                                src="img/logo_qualitas_leather.svg"
+                                alt="Логотип qualitas leather"
+                                class="logo__img"
+                            />
+                        </a>
+                    </div>
+                    <div class="nav">
+                        <ul class="nav__list">
+                            <li class="nav__item">Главная</li>
+                            <li class="nav__item">Катлог</li>
+                            <li class="nav__item">Блог</li>
+                            <li class="nav__item">Информация</li>
+                            <li class="nav__item">Контакты</li>
+                        </ul>
+                    </div>
+                </nav>
+                <h1>Мастерская кожаных изделий ручной работы</h1>
+            </div>
+        </header>
+        <section>
+            <div class="container">
+                <div class="catalog">
+                    <div class="h2-title">
+                        <h2>Каталог</h2>
+                        <span class="underline"></span>
+                    </div>
+                    <ul class="catalog__list">
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                        <li class="catalog__item">
+                            <img
+                                src=""
+                                alt=""
+                                class="catalog__image"
+                            /><span></span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="our-philosophy">
+                    <div class="h2-title">
+                        <h2>Наша философия</h2>
+                        <span class="underline"></span>
+                    </div>
+                    <div class="our-philosophy__list">
+                        <div class="our-philosophy__item">
+                            <h3 class="our-philosophy__item__title">Следование традициям</h3>
+                            <p class="our-philosophy__item__p">Последовая примеру отца, который занимался ремотом обуви, мы реши создать первый кошелек.</p>
+                        </div>
+                        <div class="our-philosophy__item">
+                            <h3 class="our-philosophy__item__title">Внимание к деталям</h3>
+                            <p class="our-philosophy__item__p">Мы устремили свое внимание на простоту и дизайн изделий, при этом не перегружаем их излишней функциональностью</p>
+                        </div>
+                        <div class="our-philosophy__item">
+                            <h3 class="our-philosophy__item__title">Профессионализм</h3>
+                            <p class="our-philosophy__item__p">Чтобы перенять весь опыт и мастерство предков, потребовалось несколько лет обучения и практики.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="additional_services">
+                    <div class="h2-title">
+                        <h2>Дополнительные услуги</h2>
+                        <span class="underline"></span>
+                    </div>
+                    <div class="additional_services__list">
+                        <div class="additional_services__item">
+                            <img src="" alt="" class="additional_services__item__img">
+                            <p class="additional_services__item__p"></p>
+                        </div>
+                        <div class="additional_services__item">
+                            <img src="" alt="" class="additional_services__item__img">
+                            <p class="additional_services__item__p"></p>
+                        </div>
+                        <div class="additional_services__item">
+                            <img src="" alt="" class="additional_services__item__img">
+                            <p class="additional_services__item__p"></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <footer></footer>
+    </body>
 </html>
